[package]
name = "mu_pi"
version = "6.0.0"
edition = "2024"
license = "BSD-2-Clause-Patent"
description = "Platform Initialization (PI) Specification definitions and support code in Rust."
repository = "https://github.com/microsoft/mu_rust_pi"
readme = "README.md"
rust-version = "1.85"
keywords = ["firmware", "mu", "pi", "uefi"]
categories = ["embedded", "hardware-support", "no-std"]

[dependencies]
indoc = "2.0"
num-traits = { version = "0.2", default-features = false }
r-efi = { version = "5.0.0", default-features = false }
uuid = { version = "1.8", default-features = false }
serde = { version = "1", default-features = false, optional = true, features = [
  "alloc",
  "derive",
] }
serde_json = { version = "1.0", default-features = false, optional = true, features = ["alloc"] }

[dev-dependencies]
serde = { version = "1.0.219", features = ["derive"]}
serde_yml = "0.0.12"
brotli-decompressor = { version= "5.0.0", default-features = false}
alloc-no-stdlib = { version = "~2.0"}

[features]
nightly = []
serde = ["dep:serde", "dep:serde_json"]
